[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blockswap"
version = "0.1.0"
description = "Block Swapping Environment with Franka Panda Arm - A MuJoCo environment implementing the block-swapping task"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21.0",
    "gymnasium>=0.28.0",
    "mujoco>=2.3.0",
    "keyboard>=0.13.5",
    "ur-analytic-ik==0.0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/pranavnt/blockswap"
Repository = "https://github.com/pranavnt/blockswap"
Issues = "https://github.com/pranavnt/blockswap/issues"

[project.scripts]
blockswap = "blockswap.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["blockswap*"]
